--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
+    "connected-react-router": "^6.9.1",
     "core-js": "^3.9.0",
     "css-loader": "^5.0.2",
     "cssnano": "^4.1.10",
@@ -32,10 +33,14 @@
     "file-loader": "^6.2.0",
     "flow-bin": "^0.145.0",
     "fs": "0.0.1-security",
+    "history": "^5.0.0",
+    "hoist-non-react-statics": "^3.3.2",
     "html-webpack-plugin": "^5.2.0",
     "identity-obj-proxy": "^3.0.0",
+    "immutable": "^4.0.0-rc.12",
+    "invariant": "^2.2.4",
     "less": "^4.1.1",
-    "less-loader": "^8.0.0",
+    "less-loader": "^5.0.0",
     "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^1.3.8",
@@ -48,9 +53,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-form": "^4.0.1",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
