--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
     "redux-saga": "^1.1.3",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
