--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-saga": "^1.1.3",
+    "rxjs": "^6.6.6",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
