--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config ./webpack.config.js --mode=production",
+    "build:prod": "webpack --config ./webpack.config.js --mode=production",
     "flow": "flow",
-    "dev": "webpack serve --config ./webpack.config.js --mode development"
+    "start:dev": "webpack serve --config ./webpack.config.js --mode development",
+    "deploy:prod": "lite-server –port 8080",
+    "start:prod": "npm run build:prod && npm run deploy:prod",
+    "test": "jest --watchAll"
   },
   "author": "",
   "dependencies": {
@@ -20,6 +23,7 @@
     "@babel/preset-flow": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "@babel/runtime": "^7.13.6",
+    "@testing-library/react": "^11.2.5",
     "antd": "^4.12.3",
     "autoprefixer": "^10.2.4",
     "babel-eslint": "^10.1.0",
@@ -42,6 +46,7 @@
     "less": "^4.1.1",
     "less-loader": "^5.0.0",
     "less-vars-to-js": "^1.3.0",
+    "lite-server": "^2.6.1",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^1.3.8",
     "moment": "^2.29.1",
@@ -69,5 +74,15 @@
     "webpack": "^5.24.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "devDependencies": {
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "react-test-renderer": "^17.0.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
